--- a/style/style.css
+++ b/style/style.css
@@ -33,7 +33,8 @@
     border: 1px solid #7d7d7d;
 }
 
-.file-table th {
+.file-table th,
+.file-table tr td:first-child {
     width: 50%;
     color: #ffffff;
     text-align: left;
@@ -119,9 +120,10 @@ th:first-child::after {
 .table-checkbox td>label:before {
     display: inline-block;
     content: " ";
+    margin-right: 10px;
     width: 14px;
     height: 14px;
     background-color: #2c2c2c;
-    border-radius: 2px;
     border: 1px solid #7d7d7d;
+    border-radius: 4px;
 }
