--- a/style/style.css
+++ b/style/style.css
@@ -182,7 +182,7 @@ input[type="search"] {
 .search-icon {
     position: absolute;
     z-index: 1;
-    top: -2px;
+    top: 0;
     left: 8px;
 }
 
