--- a/style/style.css
+++ b/style/style.css
@@ -20,7 +20,7 @@
 .file-table {
     width: 100%;
     margin-bottom: 40px;
-    border: 1px solid #7d7d7d;
+    box-shadow: 0 0 0 1px #7d7d7d;
     border-radius: 5px;
       
 }
@@ -39,7 +39,7 @@
 }
 
 .file-table tr{
-    border-bottom: 1px solid #7d7d7d;
+    border: 1px solid #7d7d7d;
 }
 
 .file-table tr:last-child{
@@ -55,17 +55,6 @@
 .file-table th, 
 .file-table td:first-child{
     color: #ffffff;
-}
-
-th:first-child::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    margin-left: 10px;
-    transform: translateY(-50%);
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 6px solid #ffffff;
 }
 
 .file-table .column {
