--- a/style/style.css
+++ b/style/style.css
@@ -21,8 +21,7 @@
     width: 100%;
     margin-bottom: 40px;
     box-shadow: 0 0 0 1px #7d7d7d;
-    border-radius: 5px;
-      
+    border-radius: 5px;     
 }
 
 .file-table:last-child{
@@ -53,7 +52,8 @@
 }
 
 .file-table th, 
-.file-table td:first-child{
+.file-table td:first-child,
+.file-table:first-child .column:last-child {
     color: #ffffff;
 }
 
