--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 .wrapper {
     padding-left: 220px;
-    position: relative;
+    padding-top: 100px;
+    padding-bottom: 100px;
     min-height: 100vh;
     background-color: #2c2c2c;
     color: #7d7d7d;
@@ -11,9 +12,7 @@
 
 .table-wrapper {
     max-width: 700px;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+ 
 }
 
 /*COMMON TABLE STYLE*/
